--- a/css/main.scss
+++ b/css/main.scss
@@ -102,3 +102,112 @@ a{
 	}
 }
 
+// CSS media query 
+@media (max-width: 800px){
+	.container{
+	width: 100%;
+	height: 100%;
+	background-color: $bg-color;
+	.container_badge{
+		width: 100%;
+		height: 40%;
+		.avatar{
+			width: 200px;
+			height: 200px;
+			border-radius: 50%;
+			box-shadow: $shadow-1;
+			left: 38%;top: 40%;
+			&:hover{
+				box-shadow: $shadow-2;
+			}
+		}	
+	}
+	.container_info{
+		width: 100%;
+		height: 50%;
+		.about{
+			text-align: center;
+			position: relative;
+			top: 10%;
+			left: 29%;
+			width: 42%;
+			.title{
+				color: $font-color;
+				font-size: 30px;
+				font-family: $roboto;
+			}
+			.bio{
+				color: $fnt-color;
+				padding: 10px;
+				width: 100%;
+			}
+		}
+		.links{
+			width: 68%;
+			height: 10%; 
+			position: relative;
+			top: 14%;
+			left: 15.5%;
+			padding: 10px 5px;
+			font-size: 16px;
+		}
+	}
+}
+}
+
+@media (max-width: 600px){
+	.container{
+	width: 100%;
+	height: 100%;
+	background-color: $bg-color;
+	.container_badge{
+		width: 100%;
+		height: 40%;
+		.avatar{
+			width: 200px;
+			height: 200px;
+			border-radius: 50%;
+			box-shadow: $shadow-1;
+			left: 34%;top: 40%;
+			&:hover{
+				box-shadow: $shadow-2;
+			}
+		}	
+	}
+	.container_info{
+		width: 100%;
+		height: 50%;
+		.about{
+			text-align: center;
+			position: relative;
+			top: 10%;
+			left: 29%;
+			width: 42%;
+			.title{
+				color: $font-color;
+				font-size: 30px;
+				font-family: $roboto;
+			}
+			.bio{
+				color: $fnt-color;
+				padding: 10px;
+				width: 100%;
+			}
+		}
+		.links{
+			width: 68%;
+			height: 10%; 
+			position: relative;
+			top: 14%;
+			left: 15.5%;
+			padding: 10px 5px;
+			font-size: 16px;
+			a{
+				display: block;
+				text-align: center;
+				padding: 5px;
+			}
+		}
+	}
+}
+}
