--- a/css/main.css
+++ b/css/main.css
@@ -95,4 +95,93 @@ a {
         padding: 5px 10px;
         background-color: #DD4B39; }
 
+@media (max-width: 800px) {
+  .container {
+    width: 100%;
+    height: 100%;
+    background-color: #fafafa; }
+    .container .container_badge {
+      width: 100%;
+      height: 40%; }
+      .container .container_badge .avatar {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        left: 38%;
+        top: 40%; }
+        .container .container_badge .avatar:hover {
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
+    .container .container_info {
+      width: 100%;
+      height: 50%; }
+      .container .container_info .about {
+        text-align: center;
+        position: relative;
+        top: 10%;
+        left: 29%;
+        width: 42%; }
+        .container .container_info .about .title {
+          color: #03a9f4;
+          font-size: 30px;
+          font-family: "Roboto", sans-serif; }
+        .container .container_info .about .bio {
+          color: #757575;
+          padding: 10px;
+          width: 100%; }
+      .container .container_info .links {
+        width: 68%;
+        height: 10%;
+        position: relative;
+        top: 14%;
+        left: 15.5%;
+        padding: 10px 5px;
+        font-size: 16px; } }
+@media (max-width: 600px) {
+  .container {
+    width: 100%;
+    height: 100%;
+    background-color: #fafafa; }
+    .container .container_badge {
+      width: 100%;
+      height: 40%; }
+      .container .container_badge .avatar {
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+        left: 34%;
+        top: 40%; }
+        .container .container_badge .avatar:hover {
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
+    .container .container_info {
+      width: 100%;
+      height: 50%; }
+      .container .container_info .about {
+        text-align: center;
+        position: relative;
+        top: 10%;
+        left: 29%;
+        width: 42%; }
+        .container .container_info .about .title {
+          color: #03a9f4;
+          font-size: 30px;
+          font-family: "Roboto", sans-serif; }
+        .container .container_info .about .bio {
+          color: #757575;
+          padding: 10px;
+          width: 100%; }
+      .container .container_info .links {
+        width: 68%;
+        height: 10%;
+        position: relative;
+        top: 14%;
+        left: 15.5%;
+        padding: 10px 5px;
+        font-size: 16px; }
+        .container .container_info .links a {
+          display: block;
+          text-align: center;
+          padding: 5px; } }
+
 /*# sourceMappingURL=main.css.map */
