push the big update :)
update style, html , blog and more

--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -1,5 +1,6 @@
 // Colors variables 
-$bg-color: #fafafa;
+$bg-color: #eeeeee;
+$bg-color2: #FFFFFF;
 $font-color : #03a9f4;
 $fnt-color : #757575;
 $gplus :#DD4B39;
@@ -7,8 +8,7 @@ $twitter:#00aced;
 $fb:#3b5998;
 $github:#EEB999;
 // material box sahdow 
-$shadow-1 : 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-$shadow-2 : 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+$shadow : 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
 // Fonts 
 $roboto : 'Roboto', sans-serif;
