--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* 
 Start Stylesheet 
 Author :pro4medo@gmail.com;
@@ -6,182 +5,25 @@ license : GPL;
 Version : 0.0.2;
 */
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700,900);
-.absolute {
-  position: absolute; }
+.absolute { position: absolute; }
 
-.relative {
-  position: relative; }
+.relative { position: relative; }
 
-* {
-  margin: 0;
-  padding: 0; }
+* { margin: 0; padding: 0; }
 
-body {
-  font-family: "Roboto", sans-serif !important;
-  color: #757575;
-  overflow: hidden; }
+body { font-family: "Roboto", sans-serif !important; color: #757575; overflow: hidden; }
 
-img {
-  display: inline-block; }
+img { display: inline-block; }
 
-a {
-  color: #03a9f4;
-  text-decoration: none; }
+a { color: #03a9f4; text-decoration: none; }
 
-.container {
-  width: 100%;
-  height: 100%;
-  background-color: #fafafa; }
-  .container .container_badge {
-    width: 100%;
-    height: 40%; }
-    .container .container_badge .avatar {
-      width: 200px;
-      height: 200px;
-      border-radius: 50%;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-      left: 42.6%;
-      top: 40%; }
-      .container .container_badge .avatar:hover {
-        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
-  .container .container_info {
-    width: 100%;
-    height: 50%; }
-    .container .container_info .about {
-      text-align: center;
-      position: relative;
-      top: 14%;
-      left: 29%;
-      width: 42%; }
-      .container .container_info .about .title {
-        color: #03a9f4;
-        font-size: 28px;
-        font-family: "Roboto", sans-serif;
-        padding-bottom: 8px;
-        padding-top: 5px; }
-      .container .container_info .about .bio {
-        color: #757575;
-        padding: 15px;
-        /* Quote styling 
-        &:before{
-        	 content: "ΓÇ£";
-        }
-        &:after{
-        	content: "ΓÇ¥";
-        }
-        */ }
-    .container .container_info .links {
-      width: 40%;
-      height: 30%;
-      position: relative;
-      top: 14%;
-      left: 30.5%;
-      padding: 10px 5px;
-      font-size: 16px; }
-      .container .container_info .links .fb_link {
-        color: white;
-        padding: 5px 10px;
-        background-color: #3b5998; }
-      .container .container_info .links .twitter_link {
-        color: white;
-        padding: 5px 10px;
-        background-color: #00aced; }
-      .container .container_info .links .github_link {
-        color: white;
-        padding: 5px 10px;
-        background-color: #EEB999; }
-      .container .container_info .links .gplus_link {
-        color: white;
-        padding: 5px 10px;
-        background-color: #DD4B39; }
-
-@media (max-width: 800px) {
-  .container {
-    width: 100%;
-    height: 100%;
-    background-color: #fafafa; }
-    .container .container_badge {
-      width: 100%;
-      height: 40%; }
-      .container .container_badge .avatar {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        left: 38%;
-        top: 40%; }
-        .container .container_badge .avatar:hover {
-          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
-    .container .container_info {
-      width: 100%;
-      height: 50%; }
-      .container .container_info .about {
-        text-align: center;
-        position: relative;
-        top: 10%;
-        left: 29%;
-        width: 42%; }
-        .container .container_info .about .title {
-          color: #03a9f4;
-          font-size: 30px;
-          font-family: "Roboto", sans-serif; }
-        .container .container_info .about .bio {
-          color: #757575;
-          padding: 10px;
-          width: 100%; }
-      .container .container_info .links {
-        width: 68%;
-        height: 10%;
-        position: relative;
-        top: 14%;
-        left: 15.5%;
-        padding: 10px 5px;
-        font-size: 16px; } }
-@media (max-width: 600px) {
-  .container {
-    width: 100%;
-    height: 100%;
-    background-color: #fafafa; }
-    .container .container_badge {
-      width: 100%;
-      height: 40%; }
-      .container .container_badge .avatar {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        left: 34%;
-        top: 40%; }
-        .container .container_badge .avatar:hover {
-          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); }
-    .container .container_info {
-      width: 100%;
-      height: 50%; }
-      .container .container_info .about {
-        text-align: center;
-        position: relative;
-        top: 10%;
-        left: 29%;
-        width: 42%; }
-        .container .container_info .about .title {
-          color: #03a9f4;
-          font-size: 30px;
-          font-family: "Roboto", sans-serif; }
-        .container .container_info .about .bio {
-          color: #757575;
-          padding: 10px;
-          width: 100%; }
-      .container .container_info .links {
-        width: 68%;
-        height: 10%;
-        position: relative;
-        top: 14%;
-        left: 15.5%;
-        padding: 10px 5px;
-        font-size: 16px; }
-        .container .container_info .links a {
-          display: block;
-          text-align: center;
-          padding: 5px; } }
+.container { width: 100%; height: 100%; background-color: #eeeeee; }
+.container .card { position: absolute; top: 15%; left: 30%; height: 50%; width: 40%; background-color: #FFFFFF; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+.container .card .card_img { background-image: url("http://www.topofandroid.com/wp-content/uploads/2015/05/Android-L-Material-Design-Wallpapers-5.png"); background-size: 546px 189px; width: 100%; height: 40%; }
+.container .card .card_avatar .avatar { position: absolute; border-radius: 50%; width: 120px; height: 120px; top: 12%; left: 38%; z-index: 20; filter: blur(0px); }
+.container .card .card_content { position: absolute; top: 44%; font-family: "Roboto", sans-serif; padding: 15px; }
+.container .card .card_content .title { font-family: "Roboto", sans-serif; font-size: 26px; text-align: center; }
+.container .card .card_content .content { margin-top: 10px; line-height: 1.5; }
+.container .card .card_buttons { position: absolute; top: 88%; width: 100%; height: 14%; border-top: 1px solid #EEE; }
 
 /*# sourceMappingURL=main.css.map */
