--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -8,7 +8,8 @@ $twitter:#00aced;
 $fb:#3b5998;
 $github:#EEB999;
 // material box sahdow 
-$shadow : 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+$shadow1 : 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+$shadow2 : 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
 // Fonts 
 $roboto : 'Roboto', sans-serif;
