--- a/css/main.scss
+++ b/css/main.scss
@@ -29,17 +29,18 @@ a{
 	background-color: $bg-color;
 	.card{
 		position : absolute;
-		top: 15%;
+		top: 22%;
 		left: 30%;
 		height : 50%;
 		width: 40%;
 		background-color: $bg-color2;
-		box-shadow : $shadow;
+		box-shadow : $shadow1;
 		.card_img{
 			background-image: url("http://www.topofandroid.com/wp-content/uploads/2015/05/Android-L-Material-Design-Wallpapers-5.png");
 			background-size: 546px 189px;
 			width: 100%;
 			height: 40%;
+			box-shadow: $shadow1;
 			//-webkit-filter: blur(2px);
 			//filter: blur(2px);
 		}
@@ -51,8 +52,7 @@ a{
 				height : 120px;
 				top: 12%;
 				left: 38%;
-				z-index: 20;
-				filter : blur(0px);
+				box-shadow: $shadow1;
 			}
 		}
 		.card_content{
@@ -72,11 +72,73 @@ a{
 		}
 		.card_buttons{
 			position: absolute;
-			top: 88%;
-			//clear:both;
+			top: 90%;
+			left: 2%;
 			width: 100%;
 			height: 14%;
-			border-top: 1px solid #EEE;
+			.link{
+				padding: 6px 6px;
+				background-color: #eee;
+				color: #fff;
+				font-family: $roboto !important;
+				font-size: 14px;
+				transition: background-color 0.3s;
+				-webkit-transition: background-color 0.3s;
+				-moz-transition: background-color 0.3s;
+			}
+			.facebook{
+				color : $fb;
+				&:hover{
+				background-color: $fb;
+				color : white;
+				box-shadow: $shadow1;
+			}
+			}
+			.twitter{
+				color: $twitter;
+				&:hover{
+				background-color: $twitter;
+				color : white;
+				box-shadow: $shadow1;
+				}
+			}
+			.github{
+				color : black;
+				&:hover{
+				background-color: #000;
+				color : white;
+				box-shadow: $shadow1;
+				}
+			}
+			.gplus{
+				color : $gplus;
+				&:hover{
+				background-color: $gplus;
+				color : white;
+				box-shadow: $shadow1;
+				}
+			}
+			.fa{
+				padding: 5px;
+				font-weight: bold;
+			}
+		}
+	}
+	.blog_link{
+		color : #c2c2c2;
+		border-bottom: 1px solid #c2c2c2;
+		font-size: 16px;
+		position: absolute;
+		top: 130%;
+		left: 130%;
+		width: 200px;
+		height: 20px;
+		padding: 5px;
+		//border: 1px solid #000;
+		transition: color border 0.4s;
+		&:hover{
+			color: $fnt-color;
+			border-bottom: 1px solid $fnt-color;
 		}
 	}
 }
