--- a/css/main.scss
+++ b/css/main.scss
@@ -1,144 +1,53 @@
-/* 
-Start Stylesheet 
-Author :pro4medo@gmail.com;
-license : GPL;
-Version : 0.0.2;
-*/
-@import '_vars.scss';
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700,900);
-// let's start some styling here 
-*{
-	margin: 0;
-	padding: 0;
+---
+# Only the main Sass file needs front matter (the dashes are enough)
+---
+@charset "utf-8";
+
+
+
+// Our variables
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-size:   16px;
+$base-font-weight: 400;
+$small-font-size:  $base-font-size * 0.875;
+$base-line-height: 1.5;
+
+$spacing-unit:     30px;
+
+$text-color:       #111;
+$background-color: #fdfdfd;
+$brand-color:      #2a7ae2;
+
+$grey-color:       #828282;
+$grey-color-light: lighten($grey-color, 40%);
+$grey-color-dark:  darken($grey-color, 25%);
+
+// Width of the content area
+$content-width:    800px;
+
+$on-palm:          600px;
+$on-laptop:        800px;
+
+
+
+// Use media queries like this:
+// @include media-query($on-palm) {
+//     .wrapper {
+//         padding-right: $spacing-unit / 2;
+//         padding-left: $spacing-unit / 2;
+//     }
+// }
+@mixin media-query($device) {
+    @media screen and (max-width: $device) {
+        @content;
+    }
 }
-body{
-	font-family: $roboto !important;
-	color: $fnt-color;
-	overflow: hidden;
-}
-img{
-	display: inline-block;
-}
-a{
-	color: $font-color;
-	text-decoration: none;
-}
-.container{
-	width: 100%;
-	height: 100%;
-	background-color: $bg-color;
-	.card{
-		position : absolute;
-		top: 22%;
-		left: 30%;
-		height : 50%;
-		width: 40%;
-		background-color: $bg-color2;
-		box-shadow : $shadow1;
-		.card_img{
-			background-image: url("http://www.topofandroid.com/wp-content/uploads/2015/05/Android-L-Material-Design-Wallpapers-5.png");
-			background-size: 546px 189px;
-			width: 100%;
-			height: 40%;
-			box-shadow: $shadow1;
-			//-webkit-filter: blur(2px);
-			//filter: blur(2px);
-		}
-		.card_avatar{
-			.avatar{
-				position: absolute; 
-				border-radius : 50%;
-				width: 120px;
-				height : 120px;
-				top: 12%;
-				left: 38%;
-				box-shadow: $shadow1;
-			}
-		}
-		.card_content{
-			position: absolute;
-			top: 44%;
-			font-family: $roboto;
-			padding : 15px;
-			.title{
-				font-family: $roboto;
-				font-size: 26px;
-				text-align: center;
-			}
-			.content{
-				margin-top: 10px;
-				line-height:1.5;
-			}
-		}
-		.card_buttons{
-			position: absolute;
-			top: 90%;
-			left: 2%;
-			width: 100%;
-			height: 14%;
-			.link{
-				padding: 6px 6px;
-				background-color: #eee;
-				color: #fff;
-				font-family: $roboto !important;
-				font-size: 14px;
-				transition: background-color 0.3s;
-				-webkit-transition: background-color 0.3s;
-				-moz-transition: background-color 0.3s;
-			}
-			.facebook{
-				color : $fb;
-				&:hover{
-				background-color: $fb;
-				color : white;
-				box-shadow: $shadow1;
-			}
-			}
-			.twitter{
-				color: $twitter;
-				&:hover{
-				background-color: $twitter;
-				color : white;
-				box-shadow: $shadow1;
-				}
-			}
-			.github{
-				color : black;
-				&:hover{
-				background-color: #000;
-				color : white;
-				box-shadow: $shadow1;
-				}
-			}
-			.gplus{
-				color : $gplus;
-				&:hover{
-				background-color: $gplus;
-				color : white;
-				box-shadow: $shadow1;
-				}
-			}
-			.fa{
-				padding: 5px;
-				font-weight: bold;
-			}
-		}
-	}
-	.blog_link{
-		color : #c2c2c2;
-		border-bottom: 1px solid #c2c2c2;
-		font-size: 16px;
-		position: absolute;
-		top: 130%;
-		left: 130%;
-		width: 200px;
-		height: 20px;
-		padding: 5px;
-		//border: 1px solid #000;
-		transition: color border 0.4s;
-		&:hover{
-			color: $fnt-color;
-			border-bottom: 1px solid $fnt-color;
-		}
-	}
-}
+
+
+
+// Import partials from `sass_dir` (defaults to `_sass`)
+@import
+        "base",
+        "layout",
+        "syntax-highlighting"
+;
