update jekyll site

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,7 +16,7 @@ dl, dd, ol, ul, figure {
 body {
     font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
     color: $text-color;
-    background-color: lighten(grey, 49%);
+    background-color: $background-color;
     -webkit-text-size-adjust: 100%;
     -webkit-font-feature-settings: "kern" 1;
     -moz-font-feature-settings: "kern" 1;
@@ -83,11 +83,6 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
     font-weight: $base-font-weight;
-    color: lighten(black, 30%);
-}
-
-p{
-  color: lighten(black, 53%);
 }
 
 
@@ -105,6 +100,7 @@ a {
 
     &:hover {
         color: $text-color;
+        text-decoration: underline;
     }
 }
 
