--- a/css/main.scss
+++ b/css/main.scss
@@ -1,13 +1,11 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
-@import url(rtl.css);
 @charset "utf-8";
 
 
 
 // Our variables
-$teal-color: #009688;
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
@@ -16,9 +14,9 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       lighten(#111, 40%);
+$text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      rgb(177, 204, 63);
+$brand-color:      #2a7ae2;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
