--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header class="site-header">
 
   <div class="wrapper">
-
+    <a href="{{ site.baseurl }}/">
+      <img src="https://avatars3.githubusercontent.com/u/4208162" alt="hey!" class="avatar-img" />
+    </a>
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
     <nav class="site-nav">
