--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,22 +1,33 @@
 /**
  * Site header
  */
+ .html,body,*{
+ direction:rtl;
+ text-align: right;
+  }
 .site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
+    //border-top: 5px solid $grey-color-dark;
+    //border-bottom: 1px solid $grey-color-light;
+    min-height: 220px;
 
     // Positioning context for the mobile navigation icon
     position: relative;
+    background-color: rgb(0, 137, 123);
 }
 
 .site-title {
-    font-size: 26px;
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%, 50%);
+    font-size: 30px;
     font-weight: 300;
     line-height: 56px;
     letter-spacing: -1px;
-    margin-bottom: 0;
-    float: left;
+    //margin-bottom: 0;
+    //float: right;
+    color : white !important;
+    font-family: $kufi;
 
     &,
     &:visited {
@@ -24,8 +35,25 @@
     }
 }
 
+/*====Header=avatar=image========*/
+.avatar-img{
+  position: absolute;
+  top: 1%;
+  right: 50%;
+  transform: translate(50%, 10%);
+  max-height: 120px;
+  max-width: 120px;
+  border-radius: 80%;
+  border: 2px solid white;
+  cursor: pointer;
+  transition: all ease-In 0.3s;
+  &:hover{
+    box-shadow: 1px 1px 20px rgba(0,0,0,0.3);
+  }
+}
+
 .site-nav {
-    float: right;
+    float: left;
     line-height: 56px;
 
     .menu-icon {
@@ -33,7 +61,7 @@
     }
 
     .page-link {
-        color: $text-color;
+        color: white;
         line-height: $base-line-height;
 
         // Gaps between nav items, but not on the last one
@@ -45,27 +73,28 @@
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
-        right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
+        left: $spacing-unit / 2;
+        //background-color: $background-color;
+        //border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
 
         .menu-icon {
             display: block;
-            float: right;
+            float: left;
             width: 36px;
             height: 26px;
             line-height: 0;
             padding-top: 10px;
             text-align: center;
+            cursor: pointer;
 
             > svg {
                 width: 18px;
                 height: 15px;
 
                 path {
-                    fill: $grey-color-dark;
+                    fill: white;
                 }
             }
         }
@@ -100,6 +129,7 @@
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
+    background-color: lighten($grey-color-light, 5%);
 }
 
 .footer-heading {
