--- a/css/main.scss
+++ b/css/main.scss
@@ -1,11 +1,18 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+@import url(rtl.css);
+@import url(http://fonts.googleapis.com/earlyaccess/notokufiarabic.css);
+@import url(http://fonts.googleapis.com/earlyaccess/notonaskharabic.css);
 @charset "utf-8";
 
 
 
 // Our variables
+// fonts variables
+$naskh: 'Noto Naskh Arabic', serif;
+$kufi: 'Noto Kufi Arabic', sans-serif;
+/*================jekyll defaukt variables======================*/
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
